--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -13,6 +13,10 @@
 	
 
 	<div class="form-group">
+		<%= f.input :image, input_html: { class: 'form-control'} %>
+	</div>
+
+	<div class="form-group">
 		<%= f.input :title, input_html: { class: 'form-control'} %>
 	</div>
 
