--- a/app/views/pins/edit.html.erb
+++ b/app/views/pins/edit.html.erb
@@ -1,5 +1,7 @@
-<h1>Edit Pin</h1>
+<div class="col-sm-6 col-sm-offset-3">
+	<h1>Edit Pin</h1>
+	<%= image_tag @pin.image.url(:medium) %>
+	<%= render 'form' %>
 
-<%= render 'form' %>
-
-<%= link_to 'Cancel', pin_path %>
+	<%= link_to 'Cancel', pin_path %>
+</div>
