--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,4 +1,11 @@
-<%= link_to 'New Pin', new_pin_path %>
-<% @pins.each do |pin| %>
-	<h2> <%= link_to pin.title, pin %> </h2>
-<% end %>
+<div id="pins" class="transitions-enabled">
+	<% @pins.each do |pin| %>
+		<div class="box panel panel-default">
+			<%= link_to (image_tag pin.image.url), pin %>
+			<div class="panel-body">
+				<h2> <%= pin.title %> </h2>
+				<p class="user"> Submitted by: <%=pin.user.email%> </p>
+			</div>
+		</div>
+	<% end %>
+</div>
