--- a/app/views/pins/new.html.erb
+++ b/app/views/pins/new.html.erb
@@ -1,5 +1,7 @@
-<h1> New Form </h1>
+<div class="col-sm-6 col-sm-offset-3">
+	<h1> New Form </h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Back', root_path %>
+	<%= link_to 'Back', root_path %>
+</div>
