--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,9 +1,39 @@
-<h1>
-	<%= @pin.title %>
-</h1>
+<div id="pins_show" class="row">
+	<div class="col-sm-8 col-sm-offset-2">
+		<div class="panel panel-default">
+			<div class="panel-heading pin_image ">
+				<%= image_tag @pin.image.url %>
+			</div>
+			<div class="panel-body">
+				<h1> <%= @pin.title %> </h1>
+				<p> <%= @pin.description %> </p>
+			</div>
+			<div class="panel-footer">
+				<div class="row">
+					<div class="col-sm-6">
+						<p> Submitted by:  <%= @pin.user.email %>
+					</div>
+					<div class="col-sm-6">
+						<div class="btn-group pull-right">
+							<%= link_to like_pin_path(@pin), method: :put, class: "btn btn-default" do %>
+									<span class="glyphicon glyphicon-heart"> <%= @pin.get_upvotes.size %> </span> 
+									
+							<% end %>
+								
+							<%= link_to 'Edit', edit_pin_path, class: "btn btn-default" %>
+							<%= link_to 'Delete', pin_path, method: :delete, data: {confirm: 'Are you sure?'}, class: "btn btn-default" %>
 
-<p> <%= @pin.description %> </p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 
-<%= link_to 'Back', root_path %>
-<%= link_to 'Edit', edit_pin_path %>
-<%= link_to 'Delete', pin_path, method: :delete, data: {confirm: 'Are you sure?'} %>
+
+
+
+
+
+
