--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -16,13 +16,13 @@
 					<div class="col-sm-6">
 						<div class="btn-group pull-right">
 							<%= link_to like_pin_path(@pin), method: :put, class: "btn btn-default" do %>
-									<span class="glyphicon glyphicon-heart"> <%= @pin.get_upvotes.size %> </span> 
-									
+								<span class="glyphicon glyphicon-heart"> <%= @pin.get_upvotes.size %> </span> 	
 							<% end %>
-								
-							<%= link_to 'Edit', edit_pin_path, class: "btn btn-default" %>
-							<%= link_to 'Delete', pin_path, method: :delete, data: {confirm: 'Are you sure?'}, class: "btn btn-default" %>
 
+							<% if user_signed_in? %>
+								<%= link_to 'Edit', edit_pin_path, class: "btn btn-default" %>
+								<%= link_to 'Delete', pin_path, method: :delete, data: {confirm: 'Are you sure?'}, class: "btn btn-default" %>
+							<% end %>
 						</div>
 					</div>
 				</div>
