--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -2,7 +2,7 @@
 	<div class="col-sm-8 col-sm-offset-2">
 		<div class="panel panel-default">
 			<div class="panel-heading pin_image ">
-				<%= image_tag @pin.image.url %>
+				<%= image_tag @pin.image.url(:medium) %>
 			</div>
 			<div class="panel-body">
 				<h1> <%= @pin.title %> </h1>
